<?xml version="1.0"?>
<package>
  <name>cpimouse_run_corridor</name>
  <version>0.1.0</version>
  <description>The cpimouse_run_corridor package</description>

  <maintainer email="ryuichiueda@gmail.com">Ryuichi Ueda</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>raspimouse_ros_2</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>raspimouse_ros_2</run_depend>

</package>
